--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,6 @@ p {
   font-family: Inter, sans-serif;
   font-size: 16px;
   font-weight: 600;
-  height: 48px;
   justify-content: center;
   letter-spacing: -0.8px;
   line-height: 24px;
@@ -33,7 +32,8 @@ p {
   user-select: none;
   -webkit-user-select: none;
   float: right;
-  height: 100%;
+  height: 70%;
+  margin: 10px;
   touch-action: manipulation;
 }
 
