--- a/src/styles.css
+++ b/src/styles.css
@@ -60,8 +60,8 @@ p {
 }
 
 .search input[type="text"] {
-  width: 300px;
-  height: 50px;
+  width: 30vh;
+  height: 5vh;
   border-radius: 25px;
   border: none;
   overflow: hidden;
